syntax = "proto3";

package im.protocol;

option go_package = "github.com/txchat/im/api/protocol;protocol";

enum Op {
  Undefined = 0;

  Auth = 1;
  AuthReply = 2;

  Heartbeat = 3;
  HeartbeatReply = 4;

  Disconnect = 5;
  DisconnectReply = 6;

  Message = 7;
  MessageReply = 8;

  ProtoReady = 20;
  ProtoFinish = 21;
  ProtoResend = 22;

  Raw = 23;
}

// Proto 中 Op 为 OpAuth 时， body 必须可以反序列化为 AuthMsg
message AuthBody {
  string appId = 1;
  string token = 2;
  bytes ext = 3; // 其它业务方可能需要的信息
}

message Proto {
  int32 ver = 1;
  int32 op = 2;
  int32 seq = 3;
  int32 ack = 4;
  bytes body = 5;
}
